--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -6,6 +6,9 @@
     <title>Express React</title>
     <meta name="description" content="Boilerplate for React with Express.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <% if (env === 'production') { %>
+      <link rel="stylesheet" type="text/css" href="/main.min.css">
+    <% } %>
   </head>
   <body>
     <div id="root"></div>
